# rust-journey

./: .gitignore  .pre-commit-config.yaml  .rust.md  CLAUDE.md  README.md  _typos.toml  deny.toml
.github/workflows/: build.yml
000-template/: CLAUDE.md
p000-template/: CLAUDE.md  Cargo.toml  README.md
p001-rustcli/: CHANGELOG.md  CLAUDE.md  README.md  cliff.toml
